--- a/frontend/src/styles/components/research-areas.module.scss
+++ b/frontend/src/styles/components/research-areas.module.scss
@@ -1,4 +1,4 @@
- .research-areas {
+.research-areas {
   width: 1200px;
   max-width: 100%;
   margin: 0 auto 4rem;
@@ -80,7 +80,7 @@
   &__nav-number {
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-bold);
-    font-family: 'Courier New', monospace;
+    font-family: "Courier New", monospace;
     min-width: 32px;
     color: inherit;
   }
@@ -170,4 +170,3 @@
     transform: translateY(0);
   }
 }
-
