--- a/frontend/src/styles/components/footer.module.scss
+++ b/frontend/src/styles/components/footer.module.scss
@@ -1,4 +1,3 @@
-
 .site-footer {
   position: relative;
   background: var(--gradient-primary);
@@ -14,7 +13,11 @@
     width: 100%;
     height: 100%;
     opacity: 0.05;
-    background-image: radial-gradient(circle at 2px 2px, rgba(255, 255, 255, 0.3) 1px, transparent 0);
+    background-image: radial-gradient(
+      circle at 2px 2px,
+      rgba(255, 255, 255, 0.3) 1px,
+      transparent 0
+    );
     background-size: 40px 40px;
     pointer-events: none;
   }
@@ -37,7 +40,8 @@
   }
 
   &__section {
-    h3, h4 {
+    h3,
+    h4 {
       color: var(--color-secondary);
       margin-bottom: var(--spacing-md);
       font-size: var(--font-size-h5);
@@ -68,7 +72,7 @@
           position: relative;
 
           &::after {
-            content: '';
+            content: "";
             position: absolute;
             bottom: -2px;
             left: 0;
@@ -182,7 +186,8 @@
       margin-right: auto;
       text-align: center;
 
-      h3, h4 {
+      h3,
+      h4 {
         font-size: var(--font-size-h4);
       }
 
