--- a/frontend/src/styles/components/grant-logos.module.scss
+++ b/frontend/src/styles/components/grant-logos.module.scss
@@ -21,7 +21,7 @@
     width: 100%;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: calc(-1 * var(--spacing-sm));
       left: 50%;
@@ -66,7 +66,7 @@
     }
   }
 
-    &__item {
+  &__item {
     flex-shrink: 0;
     display: flex;
     align-items: center;
@@ -122,4 +122,3 @@
     }
   }
 }
-
