--- a/frontend/src/styles/pages/publications.module.scss
+++ b/frontend/src/styles/pages/publications.module.scss
@@ -75,7 +75,7 @@
     position: relative;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: 0;
       left: 0;
