[LS-23] - Feedback Loop Amendments + Improvements
Changes:
- added new banner to HomePage
- change data in several places
- upgrade research areas - if active, move to the right and prevent hover
- add translate script to use DeepL for new translations
- fix linking at footer and some HomePage buttons to link to apropriate lang versions
- update README.md file

--- a/frontend/src/styles/components/research-areas.module.scss
+++ b/frontend/src/styles/components/research-areas.module.scss
@@ -68,6 +68,14 @@
     border-color: var(--color-secondary);
     color: var(--white);
     box-shadow: 0 4px 12px rgba(232, 117, 26, 0.4);
+    transform: translateX(5px);
+    cursor: default;
+
+    &:hover {
+      background: var(--color-secondary);
+      border-color: var(--color-secondary);
+      transform: translateX(5px);
+    }
   }
 
   .active {
@@ -75,6 +83,14 @@
     border-color: var(--color-secondary);
     color: var(--white);
     box-shadow: 0 4px 12px rgba(232, 117, 26, 0.4);
+    transform: translateX(5px);
+    cursor: default;
+
+    &:hover {
+      background: var(--color-secondary);
+      border-color: var(--color-secondary);
+      transform: translateX(5px);
+    }
   }
 
   &__nav-number {
