--- a/frontend/src/styles/components/team-modal.module.scss
+++ b/frontend/src/styles/components/team-modal.module.scss
@@ -206,7 +206,7 @@
   }
 
   &__name {
-    font-size: var(--font-size-2xl);
+    font-size: var(--font-size-lg);
     font-weight: var(--font-weight-semibold);
     color: var(--color-primary);
     margin-bottom: var(--spacing-2xs);
@@ -216,7 +216,7 @@
     }
   }
 
-  &__title {
+  &__position {
     font-size: var(--font-size-lg);
     color: var(--color-secondary);
     margin-bottom: var(--spacing-md);
