--- a/frontend/src/styles/variables.module.scss
+++ b/frontend/src/styles/variables.module.scss
@@ -3,6 +3,9 @@
   --color-primary-light: #2a5a7d;
   --color-secondary: #e8751a;
   --color-secondary-hover: #d66815;
+  /* Darker shades meeting WCAG AA (4.5:1) with white text */
+  --color-secondary-accessible: #b85e14;
+  --color-secondary-accessible-hover: #9e5011;
   --color-accent: #e8751a;
   --color-accent-light: #fce9db;
   --color-accent-1: #e8751a;
