--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -17,6 +17,7 @@
 html {
   font-size: 62.5%;
   overflow-y: scroll;
+  overflow-x: hidden;
   // Optimize font rendering
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
