--- a/frontend/src/styles/components/banner-slider.module.scss
+++ b/frontend/src/styles/components/banner-slider.module.scss
@@ -115,6 +115,7 @@
   }
 
   &__dot {
+    position: relative;
     width: 12px;
     height: 12px;
     border-radius: 50%;
@@ -124,6 +125,18 @@
     transition: all 0.3s ease;
     padding: 0;
     flex-shrink: 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-width: 44px;
+      min-height: 44px;
+      width: 44px;
+      height: 44px;
+    }
 
     &:hover {
       background: var(--color-primary);
