--- a/frontend/src/styles/components/header.module.scss
+++ b/frontend/src/styles/components/header.module.scss
@@ -82,7 +82,7 @@
 
     &:hover a {
       background-color: rgba(28, 61, 90, 0.08);
-      color: var(--color-secondary);
+      color: var(--color-primary);
     }
   }
 
@@ -322,6 +322,7 @@
         a {
           display: block;
           padding: calc(var(--spacing-lg) * 0.8) 0;
+          min-height: 44px;
           text-align: center;
           font-size: var(--font-size-md);
           letter-spacing: 0.06em;
